crates/jsonschema-codegen/tests/ui/duplicate_schema_attribute.stderr
error: Duplicate attribute: `schema`
 --> tests/ui/duplicate_schema_attribute.rs:1:58
  |
1 | #[jsonschema::validator(schema = r#"{"type":"string"}"#, schema = r#"{"type":"number"}"#)]
  |                                                          ^^^^^^
