crates/jsonschema-codegen/tests/ui/duplicate_schema_attribute.rs
#[jsonschema::validator(schema = r#"{"type":"string"}"#, schema = r#"{"type":"number"}"#)]
struct Validator;

fn main() {}
